--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,18 @@ Flask-Cors==4.0.1
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==2.1.5
+numpy==2.0.0
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.32.3
+scikit-learn==1.5.0
+scipy==1.13.1
+six==1.16.0
 soupsieve==2.5
-urllib3==2.2.1
+threadpoolctl==3.5.0
+tzdata==2024.1
+urllib3==2.2.2
 Werkzeug==3.0.3
