--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ app/dtos/__pycache__/
 app/models/__pycache__/
 app/routes/__pycache__/
 app/services/__pycache__/
+app/utils/__pycache__/
 
 # Ignore DS_Store file
 *.DS_Store
